tests/reference/asr-Same_type-928201f.stderr
semantic error: Function 'same_type_as' not found or not implemented yet (if it is intrinsic)
 --> tests/errors/Same_type.f90:2:14
  |
2 |     print *, same_type_as(1.0, 1.0)
  |              ^^^^^^^^^^^^^^^^^^^^^^ 
